--- a/style.css
+++ b/style.css
@@ -108,10 +108,23 @@ input[type=tel], select {
     margin: 8px 0;
     border-radius: 4px; 
 }  
- select{
-     border: 2px solid rgb(0, 0, 0);
- } 
-select option {
-     border: 2px solid #ddd;
-     padding: 10px 10px !important;
+
+label{
+    font: size 19px;
  }
+ input[type=submit] {
+    width: 100%;
+    background-color: #CE2029;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 16px;
+    font-size: 17px;
+    margin-top: 10px;
+}
+input[type=submit]:hover {
+    background: #000;
+    transition: .4s;
+
+}
+
