--- a/style.css
+++ b/style.css
@@ -87,31 +87,33 @@ h2{
     font-size: 30px;
     margin-bottom: 20px;
 }
-input[type=tel], select {
+input[type=tel], select{
     width: 100%;
     padding: 15px 20px;
-    font-size: 18px;
+    font-size: 17px;
     margin: 8px 0;
     border-radius: 4px;
+    border: 1px solid rgb(0, 0, 0);
 } 
   input[type=text], select {
     width: 100%;
     padding: 15px 20px;
-    font-size: 18px;
+    font-size: 17px;
     margin: 8px 0;
     border-radius: 4px;
+    border: 1px solid rgb(0, 0, 0);
  } 
   input[type=email], select {
     width: 100%;
     padding: 15px 20px;
-    font-size: 18px;
+    font-size: 17px;
     margin: 8px 0;
     border-radius: 4px; 
+    border: 1px solid rgb(0, 0, 0);
 }  
-
-label{
-    font: size 19px;
- }
+label {
+    font-size: 17px;
+}
  input[type=submit] {
     width: 100%;
     background-color: #CE2029;
